syntax = "proto3";
package kk_etcd_models;
option go_package = "./;kk_etcd_models";
import "pb_user_kk_etcd.proto";

// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=../../lib/kk_etcd_models *.proto google/protobuf/timestamp.proto


message LoginParam {
  string   UserName = 1;
  string  Password = 2;
}
message LoginResponse {
  string  Token = 1;
}

message LogoutParam {
}
message LogoutResponse {

}

message UserAddParam {
  string  UserName = 2;
  string  Password = 3;
  repeated  string  Roles = 4;
}
message UserAddResponse {

}

message UserDeleteParam {
  string UserName = 1;
}
message UserDeleteResponse {

}

message GetUserParam {
  string UserName = 1;
}
message GetUserResponse {
  PBUser User = 1;
}

message MyInfoParam {

}
message MyInfoResponse {
  string  UserName = 2;
  repeated  string  Roles = 4;
}

message UserListParam {
}
message UserListResponse {
  PBListUser ListUser = 1;
}

message UserGrantRoleParam {
  string  UserName = 2;
  repeated  string  Roles = 4;
}
message UserGrantRoleResponse {

}
